# bluetooth_linux

./: README.md
01_23_2018/: BluetoothClient.py  serial_port
01_23_2018/android-linux-bluetooth-master/app/: build.gradle
01_23_2018/android-linux-bluetooth-master/gradle/wrapper/: gradle-wrapper.properties
01_23_2018/phoneTest_01_19_2018/: CMakeLists.txt
01_23_2018/phoneTest_01_19_2018/src/: myPhone.cpp  tango.h  testPhone.cpp  testShell.cpp
